<resources>
    <string name="app_name">StadsTid</string>
    <string name="avail_slots">Available times</string>
    <string name="QR_code">QR Code</string>
    <string name="settings">Settings</string>
    <string name="book_time_slot">Book</string>
    <string name="change_bookings">Change</string>
    <string name="book_start_time">Book your start time</string>
    <string name="booking_info">All slots are three hours long</string>
    <string name="upcoming_time_slot">Your next booking:</string>
    <string name="show_qr_code">Show QR-code</string>
    <string name="pass_activated">You have an active booking!</string>
    <string name="count_down_timer">Something is wrong.</string>
    <string name="pass_non_activate">You have no active booking!</string>
    <string name="count_down_to_next_pass">Next booking:</string>
    <string name="btn_first_slot">09:00</string>
    <string name="btn_second_slot">12:00</string>
    <string name="btn_third_slot">15:00</string>
    <string name="btn_fourth_slot">18:00</string>
    <string name="btn_last_slot">21:00</string>
    <string name="next_booking">You have no upcoming booking!</string>
    <string name="QR_scanner">QR scanner</string>
    <string name="login_with_bank_id">Log in bank-id</string>
    <string name="how_app_works">This is how it works</string>
    <string name="watch_instructions_video">Watch instruction video</string>
    <string name="booking_info_text">No active booking</string>
    <string name="top_logo">stadstid_logo</string>
    <string name="government_logo">Government_logo</string>
    <string name="video_icon">video_icon</string>
    <string name="edit_bookings">edit_booking_icon</string>
    <string name="ticket_with_upcoming_booking">ticket_logo_upcoming_booking</string>
    <string name="green_calendar_icon_">green_calendar_icon</string>
    <string name="stadstid_logo_black_text">stadstid_logo_black_text</string>


</resources>
