<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_grey_white">


    <ImageButton
        android:id="@+id/btn_book_time_slot"
        android:layout_width="155dp"
        android:layout_height="151dp"
        android:layout_margin="5dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:src="@drawable/start_booktimebuttoneng"
        android:text="@string/book_time_slot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.763" />

    <ImageView
        android:id="@+id/ticket_logo"
        android:layout_width="236dp"
        android:layout_height="69dp"
        android:layout_marginTop="221dp"
        android:src="@drawable/start_ticket"
        android:text="@string/upcoming_time_slot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.91" />

    <ImageView
        android:id="@+id/government_logo"
        android:layout_width="306dp"
        android:layout_height="144dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.168"
        app:srcCompat="@drawable/start_fhmlogo" />

    <ImageView
        android:id="@+id/top_logo"
        android:layout_width="208dp"
        android:layout_height="64dp"
        android:background="#FAFAFA"
        app:layout_constraintBottom_toTopOf="@+id/government_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.285"
        app:srcCompat="@drawable/start_toplogo" />

    <ImageButton
        android:id="@+id/btn_show_qr_code"
        android:layout_width="375dp"
        android:layout_height="91dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:src="@drawable/show_qr_btn_eng"
        android:text="@string/show_qr_code"
        app:layout_constraintBottom_toTopOf="@+id/ticket_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/government_logo"
        app:layout_constraintVertical_bias="0.175" />

    <TextView
        android:id="@+id/booking_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/booking_info_text"
        android:textSize="10dp"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/ticket_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_book_time_slot"
        app:layout_constraintVertical_bias="0.597" />


</androidx.constraintlayout.widget.ConstraintLayout>